2002-10-14  Bruno Haible  <bruno@clisp.org>

	* project-id: When testing for "GNU $package", ignore libtool, because
	libtool.m4 calls a package "GNU $package" even if it is not GNU.
	Reported by Andrew Suffield <asuffield@debian.org>.

2002-10-03  Bruno Haible  <bruno@clisp.org>

	* msgl-equal.h (message_equal, message_list_equal,
	msgdomain_list_equal): Add 'ignore_potcdate' argument.
	* msgl-equal-c (msgstr_equal, msgstr_equal_ignoring_potcdate): New
	functions.
	(message_equal, message_list_equal, msgdomain_equal,
	msgdomain_list_equal): Add 'ignore_potcdate' argument.
	* msgmerge.c (main): Call msgdomain_list_equal with ignore_potcdate =
	true.

2002-09-09  Bruno Haible  <bruno@clisp.org>

	* x-smalltalk.h: New file.
	* x-smalltalk.c: New file.
	* xgettext.c: Include x-smalltalk.h.
	(usage): Mention Smalltalk language.
	(language_to_extractor): Add Smalltalk support.
	(extension_to_language): Likewise.
	* Makefile.am (noinst_HEADERS): Add x-smalltalk.h.
	(xgettext_SOURCES): Add x-smalltalk.c.

2002-08-18  Bruno Haible  <bruno@clisp.org>

	* message.h (enum format_type): New enum value 'format_php'.
	(NFORMATS): Increment.
	* message.c (format_language, format_language_pretty): Add entry
	for php.
	* format.h (formatstring_php): New declaration.
	* format-php.c: New file.
	* format.c (formatstring_parsers): Add entry for php.
	* x-php.h: New file.
	* x-php.c: New file.
	* xgettext.c: Include x-php.c.
	(main): Call x_php_extract_all, x_php_keyword.
	(language_to_scanner): Add PHP rule.
	(extension_to_language): Add PHP rule.
	* Makefile.am (noinst_HEADERS): Add x-php.h.
	(FORMAT_SOURCE): Add format-php.c.
	(xgettext_SOURCES): Add x-php.c.

2002-08-17  Bruno Haible  <bruno@clisp.org>

	* urlget.c (fetch): Also try invoking the 'curl' program.

2002-08-06  Bruno Haible  <bruno@clisp.org>

	* gettext-0.11.5 released.

2002-08-02  Bruno Haible  <bruno@clisp.org>

	* read-mo.c (get_sysdep_string): Make the error message easier to
	translate.
